# DRT_Multi-Agent

./: .gitignore  README.md  pyproject.toml
multi_agent/: main.py  run_main.sh
multi_agent/agents/: advisor.py  evaluator.py  preliminary_translator.py  refinement_translator.py  reformulator.py  word_level_translator.py
multi_agent/config/: loader.py  settings.toml
multi_agent/data/: drt_triplet.json  drt_triplet.jsonl  kiss.json  xlsx2json.py
multi_agent/graph/: builder.py  graph_controller.py  state.py  visualize.py
multi_agent/prompts/: advisor_prompts.py  evaluator_prompts.py  preliminary_prompt.py  refinement_prompt.py  reformulator_prompts.py  word_level_prompt.py
server/: main.py
server/data/: input.txt  novel.txt  translated.txt
server/tools/: utils.py  verify.py
sft/: drt_sft_qlora.ipynb  drt_sft_unsloth.ipynb
sft/data/: drt_train.jsonl  drt_val.jsonl
sft/model/: Modelfile  Modelfile_opt
